# Air-Farmer-CARP

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
docs/: air_farmer_prompt.md  algorithm_porting_to_typescript.md  main.tex
references/farmland_code/src/: App.ts  main.ts
src/: main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src/algorithms/: adapter.ts  algorithms.test.ts  constructors.ts  decoder.ts  ga.ts  index.ts  memeticGA.ts  pathScanning.ts  planner.worker.ts  random.ts  runner.ts  types.ts  vns.ts
src/app/: App.tsx  routes.tsx
src/components/common/: icons.tsx
src/components/landing/: CapabilitySection.tsx  FeatureSection.tsx  FormulaSection.tsx  HeroSection.tsx  ModelingFlowSection.tsx  landing.css
src/components/layout/: TopBar.css  (+14 more)
src/data/: formulas.ts
src/geometry/: distance.ts  matrix.ts  obstacleSplitter.ts  polygon.ts  stripGenerator.ts
src/hooks/: usePlanner.ts
src/pages/: Guide.css  GuidePage.tsx  LandingPage.tsx  RoutePlanning.css  RoutePlanningPage.tsx  ScenePreview.css  ScenePreviewPage.tsx  Simulation.css  SimulationPage.tsx
src/scenarios/: builtInScenarios.ts  scenarioFactory.ts
src/simulation/: avoidance.test.ts  avoidance.ts  simStore.ts  simulationEngine.ts
src/store/: appStore.ts
src/styles/: global.css
src/three/: DepotMarker.tsx  DroneModel.tsx  FollowCamera.tsx  ObstacleRenderer.tsx  RouteRenderer.tsx  SceneCanvas.tsx  SeedingEffect.tsx  SimDriver.tsx  SimRouteOverlay.tsx  StripRenderer.tsx  WorldCanvas.tsx  coords.ts
src/types/: domain.ts
(+39 files in other folders)
