[package]
name = "air-farmer"
version = "0.1.0"
description = "基于 CARP 的无人机播种航线规划仿真系统"
authors = ["you"]
license = ""
repository = ""
default-run = "air-farmer"
edition = "2021"
rust-version = "1.57"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2", features = [] }
